# discord-bot-oot

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  oot.rs
