[package]
name = "oot-discord-bot"
version = "1.0.0"
edition = "2021"
publish = false

[lib]

[dependencies]
shuttle-service = { version = "0.8.0", features = ["bot-serenity"] }
anyhow = "1.0.68"
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
shuttle-secrets = "0.8.0"
tracing = "0.1.37"
serde = "1.0.151"
serde_derive = "1.0.151"
serde_json = "1.0.91"
